HelloUltraviolet/Fixtures/RejectedSource/Expressions/QualifiedNameResolution/Source/Main.uv
//! Rejected qualified-name specimen for unresolved qualified value lookup.

public procedure qualifiedNameResolutionReference() -> i32 {
    return MissingModule::missingValue
}
